--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "neon" #"default" # "air", "aqua", "contrast", "dark"
 
 # Site Settings
 locale                   : "en-US" 
-title                    : "توررنگ آتشی"
+title                    : "zahra"
 title_separator          : "-"
-name                     : "Poorang" 
+name                     : "zahra" 
 description              : "Welcome to my web site."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #the subpath of your site, e.g. "/blog"
@@ -84,9 +84,9 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : sauleh_e
+  username               : zahra_se
 facebook:
-  username               : sauleh.eetemadi
+  username               : zahra.semsari
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -108,10 +108,10 @@ analytics:
 # Site Author
 author:
   name             : "zahra semsari"
-  avatar           : "/assets/images/bio-photo.jpg"
-  bio              : I'm the best student.
+  avatar           : "/assets/images/flower.jpg"
+  bio              : I'm the student of computer engineering.
   location         : "تهران"
-  email            : sauleh@gmail.com
+  email            : semsarizahra64@gmail.com
   twitter: sauleh_e
   linkedin: sauleh
   google_scholar: Q25s5KkAAAAJ
