--- a/_config.yml
+++ b/_config.yml
@@ -112,11 +112,11 @@ author:
   bio              : I'm the student of computer engineering.
   location         : "تهران"
   email            : semsarizahra64@gmail.com
-  twitter: sauleh_e
-  linkedin: sauleh
+  twitter: 
+  linkedin: 
   google_scholar: Q25s5KkAAAAJ
-  github: sauleh
-  instagram: saulehe
+  github: zahrasemsari
+  instagram: 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
