--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: semsarizahra64@gmail.com
+      # url: semsarizahra64@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -138,7 +138,7 @@ author:
       # url: "https://instagram.com/"
     - label: "Telegram"
       icon: "fab fa-telegram"
-      url: "http://t.me/Zahra_Se"
+      # url: "http://t.me/Zahra_Se"
 
 # Site Footer
 footer:
