--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "zahra semsari"
   avatar           : "/assets/images/flower.jpg"
-  bio              : I'm the student of computer engineering.
+  bio              : I'm the student of computer engineering in Iran University of Science and Technology.
   location         : "تهران"
   email            : semsarizahra64@gmail.com
   twitter: 
