--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "zahra semsari"
-  avatar           : "/assets/images/flower.jpg"
+  avatar           : "/assets/images/profile.jpg"
   bio              : I'm the student of computer engineering in Iran University of Science and Technology.
   location         : "تهران"
   email            : semsarizahra64@gmail.com
