--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,15 @@
 # main links
 main:
-  - title: "CV"
-    url: /cv/
-  - title: "Courses"
-    url: /courses/
-  - title: "Friends"
-    url: /friends/
+  # - title: "CV"
+  #   url: /cv/
+  # - title: "Courses"
+  #   url: /courses/
+  # - title: "Friends"
+  #   url: /friends/
   - title: "Links"
     url: /links/
-  - title: "Hobbies"
-    url: /hobbies/  
+  # - title: "Hobbies"
+  #   url: /hobbies/  
   - title: "Gallery"
     url: /gallery/
   - title: "Blog"
